// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mixed with non conflicts error messages 1`] = `
"
OutputFileConflict
    mixed-with-non-conflicts/shared-output.json
"
`;

exports[`mixed with non conflicts returns result matching snapshot 1`] = `
OutputFileConflict {
  "code": 3,
  "error": Map {
    "mixed-with-non-conflicts/shared-output.json" => Array [
      Object {
        "filename": "mixed-with-non-conflicts/shared-output.json",
      },
      Object {
        "filename": "mixed-with-non-conflicts/shared-output.json",
      },
    ],
  },
  "value": undefined,
}
`;

exports[`more than one conflicts error messages 1`] = `
"
OutputFileConflict
    more-than-one-conflicts/shared-output.json
"
`;

exports[`more than one conflicts returns result matching snapshot 1`] = `
OutputFileConflict {
  "code": 3,
  "error": Map {
    "more-than-one-conflicts/shared-output.json" => Array [
      Object {
        "filename": "more-than-one-conflicts/shared-output.json",
      },
      Object {
        "filename": "more-than-one-conflicts/shared-output.json",
      },
      Object {
        "filename": "more-than-one-conflicts/shared-output.json",
      },
    ],
  },
  "value": undefined,
}
`;

exports[`not obvious conflicts error messages 1`] = `
"
OutputFileConflict
    not-obvious-conflicts/shared-output/schema.json
"
`;

exports[`not obvious conflicts returns result matching snapshot 1`] = `
OutputFileConflict {
  "code": 3,
  "error": Map {
    "not-obvious-conflicts/shared-output/schema.json" => Array [
      Object {
        "filename": "not-obvious-conflicts/shared-output/schema.json",
      },
      Object {
        "filename": "not-obvious-conflicts/shared-output/schema.json",
      },
    ],
  },
  "value": undefined,
}
`;

exports[`obvious conflicts error messages 1`] = `
"
OutputFileConflict
    obvious-conflicts/shared-output.json
"
`;

exports[`obvious conflicts returns result matching snapshot 1`] = `
OutputFileConflict {
  "code": 3,
  "error": Map {
    "obvious-conflicts/shared-output.json" => Array [
      Object {
        "filename": "obvious-conflicts/shared-output.json",
      },
      Object {
        "filename": "obvious-conflicts/shared-output.json",
      },
    ],
  },
  "value": undefined,
}
`;
